@@ -14,7 +14,7 @@ unsigned char cx = 7;
 unsigned short sx = 14;
 unsigned int ix = 21;
 unsigned long lx = 28;
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
 unsigned long long Lx = 35;
 #endif
 
@@ -25,7 +25,7 @@ testTortureExecute (void)
   unsigned short sy;
   unsigned int iy;
   unsigned long ly;
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   unsigned long long Ly;
 #endif
 
@@ -40,7 +40,7 @@ testTortureExecute (void)
 
   ly = lx / 6; ASSERT (ly == 4);
   ly = lx % 6; ASSERT (ly == 4);
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   Ly = Lx / 6; ASSERT (Ly == 5);
   Ly = Lx % 6; ASSERT (Ly == 5);
 #endif
