@@ -9,7 +9,7 @@
 #endif
 
 // TODO: Enable when these ports support long long!
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 
 typedef unsigned long long ull;
 volatile int gvol[32];
