@@ -9,7 +9,6 @@
 #endif
 
 /* PR rtl-optimization/78378 */
-#ifndef __SDCC_ds390
 unsigned long long
 foo (unsigned long long x)
 {
@@ -17,19 +16,16 @@ foo (unsigned long long x)
   x /= 232;
   return 1 + (unsigned short) x;
 }
-#endif
 
 void
 testTortureExecute (void)
 {
 #ifndef __SDCC_s08
 #ifndef __SDCC_hc08
-#ifndef __SDCC_ds390
   unsigned long long x = foo (1);
   if (x != 0x2c24)
     ASSERT(0);
   return;
-#endif
 #endif
 #endif
 }
