@@ -9,7 +9,6 @@
 #endif
 
 /* PR target/78791 */
-#ifndef __SDCC_ds390
 unsigned long long
 foo (unsigned long long x, unsigned long long y, unsigned long long z)
 {
@@ -19,18 +18,15 @@ foo (unsigned long long x, unsigned long long y, unsigned long long z)
   b ^= z;
   return a + b;
 }
-#endif
 
 void
 testTortureExecute (void)
 {
 #ifndef __SDCC_s08
 #ifndef __SDCC_hc08
-#ifndef __SDCC_ds390
   if (foo (64, 7, 0) != 10 || foo (28, 3, 2) != 14)
     ASSERT (0);
   return;
-#endif
 #endif
 #endif
 }
