@@ -9,7 +9,6 @@
 #endif
 
 /* PR tree-optimization/81556 */
-#ifndef __SDCC_ds390
 unsigned long long int b = 0xb82ff73c5c020599ULL;
 unsigned long long int c = 0xd4e8188733a29d8eULL;
 unsigned long long int d = 2, f = 1, g = 0, h = 0;
@@ -22,14 +21,12 @@ foo (void)
   g = f % ((d > 1) << 9);
   h = a & (e & (a & b & c));
 }
-#endif
+
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_ds390
   foo ();
   if (g != 1 || h != 0)
     ASSERT (0);
   return;
-#endif
 }
